--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,15 @@
 Bcrypt==4.0.0
+Celery[Redis]
 Email_validator==1.2.1
 Flask==2.0.3
+Flask-Caching==2.0.1
+Flask-CORS==3.0.10
 Flask-JWT-Extended==4.4.4
 Flask-Restful==0.3.9
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.5.1
 Jinja2==3.0.3
 Matplotlib==3.5.1
+Redis==4.3.4
 SQLAlchemy==1.4.32
+WeasyPrint==56.1
